# tcrank

./: Cargo.toml  LICENSE  README.ja_jp.md  README.md
data/: idols.csv  roles.csv
src/: main.rs  models.rs
