[package]
name = "tcrank"
version = "0.3.0"
authors = ["Sadaie Matsudaira <sadaie@matsuri-hi.me>"]
edition = "2018"
description = "Gets THE@TER CHALLENGE!! ranking using the Princess <https://api.matsurihi.me/docs/>"
readme = "README.md"
homepage = "https://github.com/sadaie/tcrank"
repository = "https://github.com/sadaie/tcrank"
keywords = ["CLI"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
reqwest = "0.9.5"
futures = "0.1.25"
log = "0.4.6"
clap = { version = "2.32.0", features = ["yaml"] }
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
env_logger = "0.6.0"
prettytable-rs = "0.8.0"
lazy_static = "1.2.0"

